set( art_Framework_Core_sources
  Actions.cc
  Breakpoints.cc
  CachedProducts.cc
  CurrentProcessingContext.cc
  DecrepitRelicInputSourceImplementation.cc
  EDAnalyzer.cc
  EDFilter.cc
  EDProducer.cc
  EngineCreator.cc
  EPStates.cc
  EventObserver.cc
  EventProcessor.cc
  EventSelector.cc
  GroupSelector.cc
  GroupSelectorRules.cc
  IEventProcessor.cc
  InputSource.cc
  InputSourceFactory.cc
  IntermediateTablePostProcessor.cc
  ModuleFactory.cc
  OutputModule.cc
  OutputWorker.cc
  Path.cc
  PrincipalCache.cc
  PrincipalMaker.cc
  ProducerBase.cc
  ProductRegistryHelper.cc
  RootDictionaryManager.cc
  Schedule.cc
  TriggerNames.cc
  TriggerResultInserter.cc
  Worker.cc
  WorkerInPath.cc
  WorkerRegistry.cc
  get_BranchDescription.cc
  wrapLibraryManagerException.cc
)

add_library(art_Framework_Core SHARED ${art_Framework_Core_sources} )
target_link_libraries(art_Framework_Core
  art_Framework_Services_System_CurrentModule_service
  art_Framework_Services_System_FloatingPointControl_service
  art_Framework_Services_System_TriggerNamesService_service
  art_Framework_Services_Optional_RandomNumberGenerator_service
  art_Framework_Principal
  art_Persistency_Provenance
  art_Persistency_Common
  art_Framework_Services_Registry
  art_Version
  ${MF_MESSAGELOGGER}
  ${FHICLCPP}
  ${CETLIB}
  ${CLHEP}
  ${SIGC}
)

install ( TARGETS
  art_Framework_Core
  DESTINATION
  ${flavorqual_dir}/lib
  )

install(FILES
  Actions.h
  BranchActionType.h
  Breakpoints.h
  CPCSentry.h
  CachedProducts.h
  CurrentProcessingContext.h
  DecrepitRelicInputSourceImplementation.h
  EDAnalyzer.h
  EDFilter.h
  EDProducer.h
  EPStates.h
  EngineCreator.h
  EventObserver.h
  EventProcessor.h
  EventSelector.h
  FCPfwd.h
  FileBlock.h
  Frameworkfwd.h
  GroupSelector.h
  GroupSelectorRules.h
  IEventProcessor.h
  InputSource.h
  InputSourceDescription.h
  InputSourceFactory.h
  InputSourceMacros.h
  IntermediateTablePostProcessor.h
  ModuleFactory.h
  ModuleMacros.h
  OccurrenceTraits.h
  OutputModule.h
  OutputModuleDescription.h
  OutputWorker.h
  Path.h
  PrincipalCache.h
  PrincipalMaker.h
  ProcessingTask.h
  ProducerBase.h
  ProductRegistryHelper.h
  PtrRemapper.h
  RootDictionaryManager.h
  RunStopwatch.h
  Schedule.h
  TFileDirectory.h
  TH1AddDirectorySentry.h
  TriggerNames.h
  TriggerReport.h
  TriggerResultInserter.h
  TypeLabelList.h
  UnknownModuleException.h
  Worker.h
  WorkerInPath.h
  WorkerParams.h
  WorkerRegistry.h
  WorkerT.h
  get_BranchDescription.h
  DESTINATION  ${product}/${version}/include/art/Framework/Core )

install_source()
