set( art_Framework_Core_sources
  Breakpoints.cc
  CachedProducts.cc
  DecrepitRelicInputSourceImplementation.cc
  EDAnalyzer.cc
  EDFilter.cc
  EDProducer.cc
  EngineCreator.cc
  EPStates.cc
  EventObserver.cc
  EventProcessor.cc
  EventSelector.cc
  GroupSelector.cc
  GroupSelectorRules.cc
  IEventProcessor.cc
  InputSource.cc
  InputSourceFactory.cc
  IntermediateTablePostProcessor.cc
  MFStatusUpdater.cc
  ModuleFactory.cc
  OutputModule.cc
  OutputWorker.cc
  Path.cc
  PrincipalCache.cc
  PrincipalMaker.cc
  ProducerBase.cc
  ProductRegistryHelper.cc
  RootDictionaryManager.cc
  Schedule.cc
  TriggerNames.cc
  TriggerResultInserter.cc
  WorkerInPath.cc
  WorkerRegistry.cc
  get_BranchDescription.cc
  wrapLibraryManagerException.cc
)

add_library(art_Framework_Core SHARED ${art_Framework_Core_sources} )
target_link_libraries(art_Framework_Core
  art_Framework_Services_System_CurrentModule_service
  art_Framework_Services_System_FloatingPointControl_service
  art_Framework_Services_System_TriggerNamesService_service
  art_Framework_Services_Optional_RandomNumberGenerator_service
  art_Framework_Principal
  art_Persistency_Common
  art_Persistency_Provenance
  art_Framework_Services_Registry
  art_Utilities
  art_Version
  ${MF_MESSAGELOGGER}
  ${FHICLCPP}
  ${CETLIB}
  ${CLHEP}
  ${SIGC}
)

install ( TARGETS
  art_Framework_Core
  DESTINATION
  ${flavorqual_dir}/lib
  )

install(FILES
  Breakpoints.h
  CPCSentry.h
  CachedProducts.h
  DecrepitRelicInputSourceImplementation.h
  EDAnalyzer.h
  EDFilter.h
  EDProducer.h
  EPStates.h
  EngineCreator.h
  EventObserver.h
  EventProcessor.h
  EventSelector.h
  FileBlock.h
  Frameworkfwd.h
  GroupSelector.h
  GroupSelectorRules.h
  IEventProcessor.h
  InputSource.h
  InputSourceDescription.h
  InputSourceFactory.h
  InputSourceMacros.h
  IntermediateTablePostProcessor.h
  MFStatusUpdater.h
  ModuleFactory.h
  ModuleMacros.h
  OutputModule.h
  OutputModuleDescription.h
  OutputWorker.h
  Path.h
  PrincipalCache.h
  PrincipalMaker.h
  ProcessingTask.h
  ProducerBase.h
  ProductRegistryHelper.h
  PtrRemapper.h
  RootDictionaryManager.h
  Schedule.h
  TriggerNames.h
  TriggerReport.h
  TriggerResultInserter.h
  UnknownModuleException.h
  WorkerInPath.h
  WorkerRegistry.h
  WorkerT.h
  get_BranchDescription.h
  DESTINATION  ${product}/${version}/include/art/Framework/Core )

install_source()
